# rdx-sdk

./: Cargo.toml  README.md
config/: example.json
crates/rdx-cli/: Cargo.toml  README.md
crates/rdx-cli/src/: main.rs
crates/rdx-core/: Cargo.toml  README.md
crates/rdx-core/src/: codec.rs  lib.rs  math.rs  model.rs  pareto_oracle.rs  preferences.rs  reaction.rs  sim.rs  trade.rs
crates/rdx-core/tests/: beta_recovery.rs  dyad_exchange.rs
