[package]
name = "rdx-core"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Optional: external codec boundary requested by user
multivariate-convex-function = { git = "https://github.com/labormedia/multivariate-convex-function", optional = true }

[features]
default = []
mvcf = ["multivariate-convex-function"]
